--- a/src/01-cart/styles/CheckCartInfo.scss
+++ b/src/01-cart/styles/CheckCartInfo.scss
@@ -36,12 +36,14 @@ $border-radius-button: 8px;
     background-color: $main-yellow;
     padding: 5px 5px;
     width: 90px;    
-    .y-check-info-pay {
-        color: $main-text;
-        font-size: 12px;
-        font-weight: bold;
-        letter-spacing: 2px;
-        text-align: center;
+    text-align: center;
+    color: $main-text;
+    font-size: 12px;
+    font-weight: bold;
+    letter-spacing: 1px;
+
+    .y-check-info {
+        
     }
 }
 
