--- a/src/01-cart/styles/CartItemsInfo.scss
+++ b/src/01-cart/styles/CartItemsInfo.scss
@@ -86,6 +86,7 @@ $border-radius-button: 8px;
                 text-align: center;
                 letter-spacing: 1px;
                 margin-left: 5px;
+                text-align: left;
             }
         }
     
