--- a/src/01-cart/styles/CartItemsList.scss
+++ b/src/01-cart/styles/CartItemsList.scss
@@ -84,6 +84,7 @@ $border-radius-button: 8px;
     
             .y-Cart-items-info-name {
                 // width: 100%;
+                color: $main-text;
                 font-weight: bold;
                 font-size: 14px;
                 text-align: left;
@@ -92,6 +93,9 @@ $border-radius-button: 8px;
                 position: absolute;
                 top: 45px;
                 left: 95px;
+            }
+            .y-Cart-items-info-name:hover {
+                text-decoration: none;
             }
         }
     
@@ -140,6 +144,9 @@ $border-radius-button: 8px;
                     appearance: none;
                     // font-weight: bold;
                 }
+            }
+            select:hover {
+                
             }
         }
     
@@ -246,6 +253,9 @@ $border-radius-button: 8px;
                     font-size: 24px;
                     letter-spacing: 3px;
                     margin-left: 0;
+
+                }
+                .y-Cart-items-info-name:hover {
 
                 }
             }
