--- a/src/01-cart/styles/CartList.scss
+++ b/src/01-cart/styles/CartList.scss
@@ -337,7 +337,7 @@ $border-radius-button: 8px;
         }
 
         .y-Cart-sections {
-            width: 100%;
+            width: 100%
         }
 
         .y-Cart-details {
@@ -421,19 +421,22 @@ $border-radius-button: 8px;
             padding: 10px;
             background-color: #fff;
             max-width: 310px;
+            margin-left: 10px;
 
             .y-Cart-rec-tab {
                 margin: 15px 0 15px 15px;
                 color: $main-blue;
-                font-size: 14px;
+                font-size: 16px;
                 font-weight: bold;
                 letter-spacing: 1px;
+                line-height: 30px;
             }
 
             .y-Cart-rec-top {
                 .y-Cart-rec-header {
                     margin-left: 15px;
-                    margin-bottom: 20px;
+                    margin-bottom: 10px;
+                    font-size: 12px;
                 }
             }
 
