--- a/src/04-product/components/style/ProductFilter.scss
+++ b/src/04-product/components/style/ProductFilter.scss
@@ -70,9 +70,9 @@ $main-border-radius: 8px;
     }
   }
 }
-.a-iconsWrapper {
-  cursor: pointer;
-}
+// .a-iconsWrapper {
+//   cursor: pointer;
+// }
 
 .a-iconAvengersWrapper {
   width: 200px;
@@ -132,9 +132,7 @@ $main-border-radius: 8px;
       .a-categoryContentWapper {
         @extend %a-flex;
         flex-direction: column;
-        margin-top: 30px;
-        // .a-categoryFIlter {
-          
+        margin-top: 30px;      
           .a-iconWrapper.blueTheme {
             border: 8px solid #87efbd;
             background-color: $secondary-blue;
@@ -154,23 +152,20 @@ $main-border-radius: 8px;
               width: 100px;
               object-fit: cover;
             }
-          // }
           .a-categoryIconWrapper {
             display: flex;
             justify-content: center;
-            .a-categoryInput {
-              display: none;
-              background-color: transparent;
-            }
-            .a-categoryName {
-              text-align: center;
-              font-size: 20px;
-              color: $secondary-blue;
-              padding-left: 5px;
-            }
+            // .a-categoryInput {
+            //   display: none;
+            //   background-color: transparent;
+            // }
           }
-          .a-categoryInput + a-iconWrapper:checked{
-            background-color: $secondary-yellow;
+          .a-categoryName {
+            text-align: center;
+            font-size: 20px;
+            margin-top: 10px;
+            color: $secondary-blue;
+            padding-left: 5px;
           }
         }
       }
@@ -246,15 +241,9 @@ $main-border-radius: 8px;
           display: inline-flex;
           margin: 12px 0;
         }
-        .a-optionWrapper:hover {
-          background-color: $green;
-          color: #fff;
-          cursor: pointer;
-        }
         .a-optionWrapper {
           background-color: $green;
           color: #fff;
-          cursor: pointer;
         }
       }
     }
