--- a/src/01-cart/styles/CartList.scss
+++ b/src/01-cart/styles/CartList.scss
@@ -102,7 +102,7 @@ $border-radius-button: 8px;
             padding: 0 30px;
             background-color: #fff;
             position: fixed;
-            z-index: 999;
+            z-index: 3;
 
             .y-progress-wrap{
                 width: 100%;
@@ -189,8 +189,8 @@ $border-radius-button: 8px;
     .y-Cart-middle {
         padding: 0 30px;
         padding-top: 75px;
-        background-color: #ECECEC; 
-        // background-color: #fdefc2;
+        // background-color: #ECECEC; 
+        background-color: #fdefc2;
 
         li {
             list-style: none;
@@ -205,12 +205,14 @@ $border-radius-button: 8px;
             padding: 10px;
 
             .y-Cart-shop-border {
+                border-radius: 10px 10px 0 0;
                 overflow: hidden;
 
                 .y-Cart-shop-cover{
                     width: 100%;
                     height: 180px;
                     // display: none;
+                    line-height: 0;
                     
                     img {
                         width: 100%;
@@ -262,9 +264,10 @@ $border-radius-button: 8px;
                 }
 
                 .y-Cart-shop-pickup {
+                    border-radius: 10px 10px 0 0;
+                    overflow: hidden;
                     background-color: #fff;
                     padding: 25px 20px;
-                    // border-radius: $border-radius-button;
                     position: relative;
                     margin-bottom: 5px;
                     
@@ -343,6 +346,7 @@ $border-radius-button: 8px;
         .y-Cart-details {
             padding: 10px;
             padding-top: 0;
+            margin-bottom: 5px;
             .y-empty-cart-wrap {
                 display: none;
             }
@@ -418,6 +422,8 @@ $border-radius-button: 8px;
         }
 
         .y-Cart-rec {
+            border-radius: 10px 10px 0 0;
+            overflow: hidden;
             padding: 10px;
             background-color: #fff;
             max-width: 310px;
@@ -437,6 +443,7 @@ $border-radius-button: 8px;
                     margin-left: 15px;
                     margin-bottom: 10px;
                     font-size: 12px;
+                    line-height: 1.5;
                 }
             }
 
@@ -596,7 +603,7 @@ $border-radius-button: 8px;
                     .y-Cart-shop-cover{
                         width: 32%;
                         height: 240px;
-                        object-fit: cover;
+                        // object-fit: cover;
                         // object-position: 0% 0%;
                         min-height: 240px;
                         border-right: $border-lg;
@@ -604,7 +611,8 @@ $border-radius-button: 8px;
                         display: block;
 
                         img {
-                            
+                            width: 100%;
+                            // height: 100%;
                         }
                     }
     
@@ -638,13 +646,15 @@ $border-radius-button: 8px;
                             
 
                             .y-Cart-shop-tel {
-    
+                                font-size: 18px;
                             }
                             .y-Cart-shop-address {
-        
+                                font-size: 18px;
+
                             }
                             .y-Cart-shop-time {
-        
+                                font-size: 18px;
+
                             }
     
                         }
@@ -659,7 +669,8 @@ $border-radius-button: 8px;
                         display: flex;
                         flex-direction: column;
                         // justify-content: space-between;
-                        margin-bottom: 15px;
+                        margin-bottom: 0px;
+                        border-radius: 0 0 0 0;
 
                         .y-Cart-pickup-top {
                             height: 72px;
@@ -674,16 +685,6 @@ $border-radius-button: 8px;
                             }
                         }
 
-                        .y-Cart-pickup-top {
-
-                            .y-Cart-pickup-title {
-
-                            }
-                            .y-Cart-pickup-statu {
-                                
-                            }
-                        }
-
                         .y-Cart-pickup-bottom {
 
                             .y-Cart-pickup-time {
@@ -692,6 +693,7 @@ $border-radius-button: 8px;
     
                         .y-Cart-pickup-border {
                             width: 100%;
+                            height: 80px;
                             right: 0;
                             bottom: 0;
                             padding: 15px 0;
@@ -715,6 +717,9 @@ $border-radius-button: 8px;
                                 .y-Cart-pickup-info-lg {
                                     display: block;
                                     font-weight: bold;
+                                    font-size: 16px;
+                                    letter-spacing: 2px;
+                                    height: 100%;
                                 }
                                 .y-Cart-pickup-info-lg:hover {
                                     cursor: pointer;
@@ -754,6 +759,7 @@ $border-radius-button: 8px;
                     color: $main-blue;
                     font-weight: bold;
                     letter-spacing: 2px;
+                    font-size: 24px;
                 }
     
                 .y-Cart-details-tab {
@@ -809,6 +815,7 @@ $border-radius-button: 8px;
                 }
 
                 .y-Cart-details-bottom {
+                    margin-top: 60px;
                     border-radius: 0 0 $border-radius-card $border-radius-card;
                     padding: 40px 45px;
                     display: flex;
@@ -842,6 +849,7 @@ $border-radius-button: 8px;
             }
     
             .y-Cart-rec {
+                background-color: transparent;
                 .y-Cart-rec-tab {
                     max-width: 190px;
                     padding: 12px 40px;
@@ -853,6 +861,8 @@ $border-radius-button: 8px;
                     color: $main-blue;
                     font-weight: bold;
                     letter-spacing: 2px;
+                    font-size: 24px;
+                    margin-bottom: 0;
                 }
 
                 .y-Cart-rec-top {
@@ -877,6 +887,7 @@ $border-radius-button: 8px;
                     .y-Cart-rec-row {
                         width: 100%;
                         display: flex;
+                        justify-content: start;
                         // justify-content: space-between;
                         .y-Cart-rec-wrap {
                             width: 25%;
