--- a/src/01-cart/styles/WishListBtn.scss
+++ b/src/01-cart/styles/WishListBtn.scss
@@ -35,12 +35,12 @@ $border-radius-button: 8px;
     border-radius: $border-radius-button;
     border: none;
     // background-color: $main-yellow;
-    padding: 2px 20px;
+    // padding: 2px 10px;
     // display: none;
 
     .y-wish-list-icon {
-        width: 20px;
-        height: 20px;
+        width: 16px;
+        height: 16px;
         margin: 0 auto; 
         img {
             width: 100%;
