--- a/src/04-product/components/style/ProductFilter.scss
+++ b/src/04-product/components/style/ProductFilter.scss
@@ -114,7 +114,7 @@ $main-border-radius: 8px;
   .a-category {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
     .a-selectType {
       color: $secondary-blue;
